load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

BAZEL_TOOLCHAIN_VERSION = "c65ef7a45907016a754e5bf5bfabac76eb702fd3"

http_archive(
    name = "bazel_toolchain",
    sha256 = "c70777b0aa877085323aa1ced3b6e011811a9800092e837043aa5f678d838301",
    strip_prefix = "bazel-toolchain-%s" % BAZEL_TOOLCHAIN_VERSION,
    url = "https://github.com/grailbio/bazel-toolchain/archive/%s.tar.gz" % BAZEL_TOOLCHAIN_VERSION,
)

load("@bazel_toolchain//toolchain:deps.bzl", "bazel_toolchain_dependencies")
load("@bazel_toolchain//toolchain:rules.bzl", "llvm_toolchain", llvm_repo = "llvm")

bazel_toolchain_dependencies()

llvm_repo(
    llvm_versions = {
        "ubuntu-20.04-x86_64": ["sycl-nightly-20230612"],
    },
    strip_prefix = "dpcpp_compiler",
    urls = {
        "ubuntu-20.04-x86_64": ["https://github.com/intel/llvm/releases/download/sycl-nightly%2F20230612/dpcpp-compiler.tar.gz"],
    },
)

llvm_toolchain(
    name = "llvm_sycl_toolchain",
    llvm_version = "sycl-nightly-20230612",
)
